--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Rats -- Juvenile poetry'
 - !lcsh 'Swine -- Juvenile poetry'
 - !lcc 'PZ'
+- GITenberg
 title: What Became of Them? and, The Conceited Little Pig
 url: http://www.gutenberg.org/ebooks/23480
